tests/transpiler/x/zig/closure.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/closure.zig:4:14: error: unused function parameter
/workspace/mochi/tests/transpiler/x/zig/closure.zig:9:16: error: use of undeclared identifier 'n'
